--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
+    "ejs" : "~0.8.5",               
     "mongoose": "^4.3.4",
     "passport": "^0.3.2",
     "passport-local" : "~0.1.6",    
