--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Voting_App",
+  "name": "Password-Scaffold",
   "version": "0.0.1",
   "description": "FreeCodeCamp Basejump #1",
   "main": "server.js",
